<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateItem">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="69dp"
        android:layout_height="46dp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/name_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="258dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/hint_text"
        android:inputType="textShortMessage|textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button"
            android:layout_width="134dp"
            android:layout_height="47dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/button_background"
            android:onClick="saveButtonClicked"
            android:text="@string/button_text"
            android:textAllCaps="false"
            android:textColor="#FFA07A"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <RadioGroup
            android:id="@+id/radiogroup"
            android:layout_width="351dp"
            android:layout_height="132dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <RadioButton
                android:id="@+id/urgent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/urgent_text"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="80dp" />

            <RadioButton
                android:id="@+id/veryImportant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/very_important_text"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="133dp" />

            <RadioButton
                android:id="@+id/someImportant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/somewhat_important_text"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="184dp" />
        </RadioGroup>

        <EditText
            android:id="@+id/d_text"
            android:layout_width="187dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/hint_d"
            android:inputType="textShortMessage|textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radiogroup" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="141dp"
            android:layout_height="45dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/description_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            app:layout_constraintEnd_toStartOf="@+id/d_text"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radiogroup" />

        <TextView
            android:id="@+id/showDate"
            android:layout_width="189dp"
            android:layout_height="45dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/default_date"
            android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/d_text" />

        <Button
            android:id="@+id/enterDate"
            android:layout_width="113dp"
            android:layout_height="50dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_background"
            android:onClick="onClick"
            android:text="@string/select_date"
            android:textAllCaps="false"
            android:textColor="#FFA07A"
            app:layout_constraintEnd_toStartOf="@+id/showDate"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />




</android.support.constraint.ConstraintLayout>